Revision history for as-cli-arguments

{{$NEXT}}

0.0.7  2022-10-13T11:58:49+02:00
    - Only quote values that have whitespace in them

0.0.6  2022-09-18T12:29:38+02:00
    - Add support for a list of Pairs

0.0.5  2022-09-18T12:22:34+02:00
    - Add support for Pair

0.0.4  2022-07-24T14:07:50+02:00
    - Gracefully handle unnamed named arguments (aka --=)
    - Gracefully handle type objects as key or value in nameds
    - Add sponsor link

0.0.3  2022-07-14T12:46:47+02:00
    - Quote strings if they have any \W in them, to be sure
    - Add candidate to show named args only, for error reporting

0.0.2  2022-02-09T05:35:56+01:00
    - Only quote strings if they have whitespace in them

0.0.1  2022-02-08T14:47:26+01:00
    - Initial version